--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ GowanusAR_2025_UnityProject/ProjectSettings/ProjectVersion.txt
 *.blob
 GowanusAR_2025_UnityProject/ProjectSettings/Packages/com.unity.muse.common/Settings.json
 GowanusAR_2025_UnityProject/Packages/packages-lock.json
+GowanusAR_2025_UnityProject/Assets/Scenes/Ship&Rem_v1_Lucas.unity.meta
