--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ GowanusAR_2025_UnityProject/ProjectSettings/ProjectVersion.txt
 GowanusAR_2025_UnityProject/ProjectSettings/Packages/com.unity.muse.common/Settings.json
 GowanusAR_2025_UnityProject/Packages/packages-lock.json
 GowanusAR_2025_UnityProject/Assets/Scenes/Ship&Rem_v1_Lucas.unity.meta
+GowanusAR_2025_UnityProject/ProjectSettings/ProjectVersion.txt
+GowanusAR_2025_UnityProject/ProjectSettings/Packages/com.unity.muse.common/Settings.json
+GowanusAR_2025_UnityProject/Packages/packages-lock.json
+GowanusAR_2025_UnityProject/Assets/Scenes/Ship&Rem_v1_Lucas.unity
