Turn off Reduce version control noise

--- a/GowanusAR_2025_UnityProject/.gitignore
+++ b/GowanusAR_2025_UnityProject/.gitignore
@@ -71,3 +71,11 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 ARFoundationRemoteInstaller
+
+GowanusAR_2025_UnityProject/ProjectSettings/ProjectVersion.txt
+*generated take*
+*editable take*
+*.blob
+GowanusAR_2025_UnityProject/ProjectSettings/Packages/com.unity.muse.common/Settings.json
+GowanusAR_2025_UnityProject/Packages/packages-lock.json
+GowanusAR_2025_UnityProject/Assets/Scenes/Ship&Rem_v1_Lucas.unity.meta
