Misc edits prior to Ashwin's last 11 commits

--- a/GowanusAR_2025_UnityProject/.gitignore
+++ b/GowanusAR_2025_UnityProject/.gitignore
@@ -73,6 +73,7 @@ crashlytics-build.properties
 ARFoundationRemoteInstaller
 
 GowanusAR_2025_UnityProject/ProjectSettings/ProjectVersion.txt
+/Users/lucaswozniak/Documents/Github/gowanusar_ashwincollab/GowanusAR_2025/GowanusAR_2025_UnityProject/ProjectSettings/ProjectVersion.txt
 *generated take*
 *editable take*
 *.blob
