--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-
 *.unity filter=lfs diff=lfs merge=lfs -text
+*.prefab filter=lfs diff=lfs merge=lfs -text
+ggml-small.en.bin filter=lfs diff=lfs merge=lfs -text
