--- a/GowanusAR_2025_UnityProject/.gitignore
+++ b/GowanusAR_2025_UnityProject/.gitignore
@@ -72,6 +72,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 ARFoundationRemoteInstaller
 
+.DS_Store
 *generated take*
 *editable take*
 *.blob
