--- a/GowanusAR_2025_UnityProject/.gitignore
+++ b/GowanusAR_2025_UnityProject/.gitignore
@@ -77,6 +77,7 @@ ARFoundationRemoteInstaller
 *editable take*
 *.blob
 GowanusAR_2025_UnityProject/ProjectSettings/Packages/com.unity.muse.common/Settings.json
-GowanusAR_2025_UnityProject/Packages/packages-lock.json
-GowanusAR_2025_UnityProject/Assets/Scenes/Ship&Rem_v1_Lucas.unity.meta
+#GowanusAR_2025_UnityProject/Packages/packages-lock.json
+#GowanusAR_2025_UnityProject/Assets/Scenes/Ship&Rem_v1_Lucas.unity.meta
 GowanusAR_2025_UnityProject/ProjectSettings/ProjectVersion.txt
+ProjectSettings/ProjectVersion.txt
