--- a/GowanusAR_2025_UnityProject/Packages/manifest.json
+++ b/GowanusAR_2025_UnityProject/Packages/manifest.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "com.cesium.unity": "1.15.4",
-    "com.google.ar.core.arfoundation.extensions": "https://github.com/google-ar/arcore-unity-extensions.git",
+    "com.google.ar.core.arfoundation.extensions": "https://github.com/google-ar/arcore-unity-extensions.git#arf6",
     "com.kyrylokuzyk.arfoundationremote": "file:../Assets/Plugins/ARFoundationRemoteInstaller/com.kyrylokuzyk.arfoundationremote.tgz",
     "com.unity.burst": "1.8.18",
     "com.unity.collab-proxy": "2.6.0",
@@ -20,6 +20,7 @@
     "com.unity.ugui": "2.0.0",
     "com.unity.visualeffectgraph": "17.0.3",
     "com.unity.visualscripting": "1.9.5",
+    "com.unity.xr.arcore": "6.0.5",
     "com.unity.xr.arkit": "6.0.5",
     "com.whisper.unity": "https://github.com/Macoron/whisper.unity.git?path=/Packages/com.whisper.unity#1.2.0",
     "com.unity.modules.accessibility": "1.0.0",
