--- a/GowanusAR_2025_UnityProject/Packages/manifest.json
+++ b/GowanusAR_2025_UnityProject/Packages/manifest.json
@@ -2,20 +2,29 @@
   "dependencies": {
     "com.cesium.unity": "1.15.4",
     "com.google.ar.core.arfoundation.extensions": "https://github.com/google-ar/arcore-unity-extensions.git#arf6",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ads": "4.4.2",
+    "com.unity.ai.navigation": "2.0.5",
+    "com.unity.analytics": "3.8.1",
     "com.unity.burst": "1.8.18",
     "com.unity.collab-proxy": "2.6.0",
     "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.feature.development": "1.0.2",
     "com.unity.formats.fbx": "5.1.1",
+    "com.unity.ide.rider": "3.0.31",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.muse.animate": "1.2.0-exp.2",
     "com.unity.muse.chat": "1.1.1-pre.2",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.postprocessing": "3.4.0",
+    "com.unity.purchasing": "4.12.2",
     "com.unity.recorder": "5.1.2",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.sentis": "2.1.2",
     "com.unity.splines": "2.7.2",
+    "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualeffectgraph": "17.0.3",
@@ -23,6 +32,7 @@
     "com.unity.xr.arcore": "6.0.5",
     "com.unity.xr.arkit": "6.0.5",
     "com.unity.xr.core-utils": "2.4.0",
+    "com.unity.xr.legacyinputhelpers": "2.1.11",
     "com.whisper.unity": "https://github.com/Macoron/whisper.unity.git?path=/Packages/com.whisper.unity#1.2.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
