--- a/GowanusAR_2025_UnityProject/.gitignore
+++ b/GowanusAR_2025_UnityProject/.gitignore
@@ -85,3 +85,6 @@ GowanusAR_2025_UnityProject/ProjectSettings/ProjectVersion.txt
 ProjectSettings/ProjectVersion.txt
 
 GowanusAR_2025_UnityProject/Assets/Scenes/Ship&Rem_v1_PATest.unity
+
+Assets/Scenes/Ship&Rem_v1_PATest.unity
+ProjectSettings/ARCoreExtensionsProjectSettings.json
